Fixed : Card height causing overlap

--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ img {
 .card {
     position: relative;
     width: 80%;
-    height: 200%;
+    height: 80%;
     margin: 20px 20px 40px 20px;
     box-sizing: border-box;
     overflow: hidden;
